--- a/src/app/main/projects/projects.component.scss
+++ b/src/app/main/projects/projects.component.scss
@@ -144,7 +144,7 @@ section {
         }
       }
     }
-    &:hover .project-info {
+    &.in-view  .project-info {
       animation: swishFromTop 0.5s forwards !important;
     }
   }
