--- a/src/styles.scss
+++ b/src/styles.scss
@@ -117,6 +117,13 @@ h1 {
   text-align: justify;
 }
 
+@media screen and (min-width: 1920px) {
+  h1 {
+    font-size: 12rem !important;
+  }
+}
+
+
 @media screen and (max-width: 1200px) {
   h1 {
     font-size: 6rem !important;
